--- a/rubocop/metrics.yml
+++ b/rubocop/metrics.yml
@@ -1,4 +1,18 @@
 Metrics/BlockLength:
+  Enabled: true
+  CountAsOne: [array, hash, heredoc, method_call]
   Exclude:
     - "spec/**/*_spec.rb"
     - "**/*.gemspec"
+
+Metrics/ClassLength:
+  Enabled: true
+  CountAsOne: [array, hash, heredoc, method_call]
+
+Metrics/MethodLength:
+  Enabled: true
+  CountAsOne: [array, hash, heredoc, method_call]
+
+Metrics/ModuleLength:
+  Enabled: true
+  CountAsOne: [array, hash, heredoc, method_call]
